--- a/static/css/base.css
+++ b/static/css/base.css
@@ -91,4 +91,11 @@ body {
     .header-container {
         padding-top: 164px;
     }
+
 }
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
