adds functionality to navigation and filtering

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="" class="read-now-button btn btn-lg rounded_0 text-uppercase py-3">Read Now</a>
+                    <a href="{% url 'products' %}" class="read-now-button btn btn-lg rounded_0 text-uppercase py-3">Read Now</a>
                 </h4>
             </div>
         </div>
