--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -58,9 +58,48 @@
 
                 <div>
                     {% for chapter in chapters %}
-                    <a class="" href="{% url 'chapter' product.id chapter.id %}">
-                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
-                    </a>
+                        {% if forloop.first %}
+                            <div class="row">
+                                <a class="" href="{% url 'chapter' product.id chapter.id %}">
+                                    <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                </a>
+                            </div>
+                        {% else %}
+                            {% if request.user.is_authenticated %}
+                                <div class="row">
+                                    <a class="" href="{% url 'chapter' product.id chapter.id %}">
+                                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                    </a>
+                                </div>
+                            {% else %}
+                                <div class="row">
+                                    <a data-toggle="modal" href="#myModal">
+                                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                    </a>
+                                </div>
+
+                                <div class="modal fade" id="myModal" role="dialog">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Modal title</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Modal body text goes here.</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'account_login' %}'">Login</button>
+                                                <button type="button" class="btn btn-secondary" onclick="location.href='{% url 'account_signup' %}'">Register</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            {% endif %}
+                        {% endif%}
                     {% endfor %}
                 </div>
 
@@ -72,4 +111,5 @@
 
 {% block postloadjs %}
 {{ block.super }}
+<script type="text/javascript" src="{% static 'chapters/js/chapter.js' %}"></script>
 {% endblock %}
