updates admin format, updates responsive styling

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,12 +13,12 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
-            <h1 class="display-4 logo-font font-tea text-black">
+            <h1 class="display-4 logo-font font-tea">
                 We love a good read
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' %}" class="read-now-button btn btn-lg rounded_0 text-uppercase py-3">Read Now</a>
+                    <a href="{% url 'products' %}" class="read-now-button btn btn-lg rounded-5 text-uppercase py-3">Read Now</a>
                 </h4>
             </div>
         </div>
