--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -44,37 +44,37 @@
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
 
-
-                <div class="col{% if s %}-12 mt-2{% endif %}">
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="text-uppercase">Other books</span>
-                    </a>
-                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
-                </div>
-                <input type="hidden" name="redirect_url" value="{{ request.path }}">
-
-                <div>
+                <div class="chapter-badges">
                     {% for chapter in chapters %}
                         {% if forloop.first %}
                             <div class="row">
                                 <a class="" href="{% url 'chapter' product.id chapter.id %}">
-                                    <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                    {% if chapter.chapter == chapter.name %}
+                                        <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }}</span>
+                                    {% else %}
+                                        <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                    {% endif %}
                                 </a>
                             </div>
                         {% else %}
                             {% if request.user.is_authenticated %}
                                 <div class="row">
                                     <a class="" href="{% url 'chapter' product.id chapter.id %}">
-                                        <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                        {% if chapter.chapter == chapter.name %}
+                                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }}</span>
+                                        {% else %}
+                                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                        {% endif %}
                                     </a>
                                 </div>
                             {% else %}
                                 <div class="row">
                                     <a data-toggle="modal" href="#myModal">
-                                        <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                        {% if chapter.chapter == chapter.name %}
+                                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }}</span>
+                                        {% else %}
+                                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                        {% endif %}
                                     </a>
                                 </div>
 
@@ -102,7 +102,16 @@
                         {% endif%}
                     {% endfor %}
                 </div>
-
+                <div class="col{% if s %}-12 mt-2{% endif %}">
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Other books</span>
+                    </a>
+                    <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                </div>
+                <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </div>
         </div>
     </div>
