--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,11 +12,11 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container-fluid .container-product-titles">
-    <div class="row">
+    <div class="row product-title-line">
         <div class="col text-center mt-3">
             <h2 class="logo-font product-titles">Titles</h2>
 
-            <hr class="product-hr w-50 mb-1">
+            <hr class="chapter-hr w-50 mb-1">
         </div>
     </div>
     <div class="row">
@@ -132,7 +132,7 @@
             {% endif %}
         </span>
         </div>
-        <div class="btt-button shadow-sm btn btn-primary btn-sm rounded-5 border border-black">
+        <div class="btt-button shadow-sm btn btn-info btn-sm rounded-5 border border-black">
             <a class="btt-link d-flex h-100">
                 <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
             </a>
