--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -19,19 +19,25 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">My Profile</h2>
+            <h2 class="logo-font mb-4">Hello, {{ profile.user }}
+                {% if profile.is_author == False %}
+                    <button class="btn btn-black rounded-0 text-uppercase float-right">Become An Author!</button>
+                {% endif %}</h2>
             <hr>
         </div>
+
     </div>
+
     <div class="row">
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Default Delivery Information</p>
-            <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
-            </form>
+            <p>Your Bookcoins: {{ profile.bookcoins }}</p>
         </div>
+        <div class="col-12 col-lg-6">
+            <button class="btn btn-black rounded-0 text-uppercase float-right" onclick="location.href='{% url 'topup_coins' %}'">Top up bookcoins</button>
+        </div>
+
+    </div>
+    <div class="row">
         <div class="col-12 col-lg-6">
             <p class="text-muted">Order History</p>
             <div class="order-history table-responsive">
@@ -40,8 +46,7 @@
                     <tr>
                         <th>Order Number</th>
                         <th>Date</th>
-                        <th>Items</th>
-                        <th>Order Total</th>
+                        <th>Coins</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -56,26 +61,32 @@
                         <td>{{ order.date }}</td>
                         <td>
                             <ul class="list-unstyled">
-                                {% for item in order.lineitems.all %}
                                 <li class="small">
-                                    {% if item.product.has_sizes %}
-                                    Size {{ item.product.size|upper }}
-                                    {% endif %}{{ item.product.name }} x{{ item.quantity }}
+                                   {{ order.coins}}
                                 </li>
-                                {% endfor %}
                             </ul>
                         </td>
-                        <td>${{ order.grand_total }}</td>
                     </tr>
                     {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
+        <div class="col-12 col-lg-6">
+            <p class="text-muted">Default Billing addressy</p>
+            <div>
+                <p>Phone number: {{ profile.default_phone_number }}</p>
+                <p>Address 1: {{ profile.default_street_address1 }}</p>
+                <p>Address 2:{{ profile.default_street_address2 }}</p>
+                <p>City: {{ profile.default_town_or_city }}</p>
+                <p>Postcode: {{ profile.default_postcode }}</p>
+                <p>Country: {{ profile.default_county }}</p>
+                <button class="btn btn-black rounded-0 text-uppercase float-right" onclick="location.href='{% url 'update_billing' %}'">Update Billing Address</button>
+            </div>
+        </div>
     </div>
-    {% endblock %}
+    <div class="row">
+        <p class="text-muted">Your Bookshelf</p>
 
-    {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+    </div>
     {% endblock %}
