--- a/templates/base.html
+++ b/templates/base.html
@@ -73,10 +73,12 @@
                     </a>
                     <div class="dropdown-menu border-0" aria-labelledby="user-options">
                         {% if request.user.is_authenticated %}
-                            {% if request.user.is_superuser %}
+                            {% if request.user.is_superuser or is_author %}
                                 <a href="" class="dropdown-item">Product Management</a>
                             {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'topup_coins' %}" class="dropdown-item">Top up bookCoins</a>
+                                <a href="{% url 'update_billing' %}" class="dropdown-item">Update billing address</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                         {% else %}
                             <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
