--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -21,7 +21,7 @@
             <hr>
             <h2 class="logo-font mb-4">Hello, {{ profile.user }}
                 {% if profile.is_author == False %}
-                    <button class="btn btn-black rounded-0 text-uppercase float-right">Become An Author!</button>
+                    <button class="btn btn-black btn-profile rounded-5 text-uppercase float-right">Become An Author!</button>
                 {% endif %}</h2>
             <hr>
         </div>
@@ -33,7 +33,7 @@
             <p>Your Bookcoins: {{ profile.bookcoins }}</p>
         </div>
         <div class="col-12 col-lg-6">
-            <button class="btn btn-black rounded-0 text-uppercase float-right" onclick="location.href='{% url 'topup_coins' %}'">Top up bookcoins</button>
+            <button class="btn btn-black rounded-5 btn-profile text-uppercase float-right" onclick="location.href='{% url 'topup_coins' %}'">Top up bookcoins</button>
         </div>
 
     </div>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="col-12 col-lg-6">
-            <p class="text-muted">Default Billing addressy</p>
+            <p class="text-muted">Default billing address</p>
             <div>
                 <p>Phone number: {{ profile.default_phone_number }}</p>
                 <p>Address 1: {{ profile.default_street_address1 }}</p>
@@ -81,7 +81,7 @@
                 <p>City: {{ profile.default_town_or_city }}</p>
                 <p>Postcode: {{ profile.default_postcode }}</p>
                 <p>Country: {{ profile.default_county }}</p>
-                <button class="btn btn-black rounded-0 text-uppercase float-right" onclick="location.href='{% url 'update_billing' %}'">Update Billing Address</button>
+                <button class="btn btn-black btn-profile rounded-5 text-uppercase float-right" onclick="location.href='{% url 'update_billing' %}'">Update Billing Address</button>
             </div>
         </div>
     </div>
