--- a/static/css/base.css
+++ b/static/css/base.css
@@ -152,6 +152,31 @@ body {
     min-width: 12em;
 }
 
+/* Styling logout confirmation */
+.logout-message {
+    margin-top: 7em;
+    margin-right: 1em;
+    background-color: #d39e !important;
+    padding-top: 15px;
+    border-radius: 5px;
+    top: 50px;
+    right: auto;
+}
+
+.btn-logout {
+    margin-bottom: 1em;
+    border-radius:5 px;
+}
+
+.message-container,
+.allauth-container {
+    position: relative;
+    margin-top: 7em;
+    right: 15px;
+    z-index: 1200;
+    color: #D8FDDA;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
