--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,19 +5,21 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
-<hr>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<div class="col col-3 float-right logout-message">
+  <hr>
+  <h2 class="logo-font font-tea mb-4">{% trans "Sign Out" %}</h2>
+  <hr>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <p class="font-tea">{% trans 'Are you sure you want to sign out?' %}</p>
+
+  <form method="post" action="{% url 'account_logout' %}">
+    {% csrf_token %}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+    {% endif %}
+    <button class="btn-logout" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
-
+</div>
 {% endblock %}
