--- a/profiles/templates/profiles/update_billing.html
+++ b/profiles/templates/profiles/update_billing.html
@@ -26,10 +26,10 @@
     <div class="row">
         <div class="col-12 col-lg-6">
             <p class="text-muted">Update Billing Address</p>
-            <form class="mt-3" action="{% url 'update_billing' %}" method="POST" id="profile-update-form">
+            <form class="mt-3 rounded-5" action="{% url 'update_billing' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                <button class="btn btn-black rounded-5 text-uppercase float-right">Update Information</button>
             </form>
         </div>
     </div>
