--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -56,22 +56,46 @@
                             <div class="row">
                                 <a class="" href="{% url 'chapter' product.id chapter.id %}">
                                     {% if chapter.chapter == chapter.name %}
-                                        <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }}</span>
+                                        <span class="p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }}</span>
                                     {% else %}
-                                        <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                        <span class="p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }} {{ chapter.name }}</span>
                                     {% endif %}
                                 </a>
                             </div>
                         {% else %}
                             {% if request.user.is_authenticated %}
                                 <div class="row">
-                                    <a class="" href="{% url 'chapter' product.id chapter.id %}">
+                                    <a thing={{ chapter.modalcode }} class="chaptergroup" {% for corder in chapterOrders %}{% for item in corder.lineitems.all %}{% if chapter.chapter == item.chapter_no %}href="{% url 'chapter' product.id chapter.id %}"{% endif %}{% endfor %}{% endfor %}>
                                         {% if chapter.chapter == chapter.name %}
-                                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }}</span>
+                                        <span class="chapterspan p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }}</span>
                                         {% else %}
-                                            <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }} {{ chapter.name }}</span>
+                                        <span class="chapterspan p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }} {{ chapter.name }}</span>
                                         {% endif %}
                                     </a>
+                                </div>
+                                <div class="modal fade" id={{ chapter.modalcode }} role="dialog">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Like the novel?</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>Would you like to buy this chapter?</p>
+                                                <p> Chapter Number: {{ chapter.chapter}} in the {{ chapter.book }}</p>
+                                                <p> This chapter costs {{ chapter.price }} coins</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <form class="mt-3 rounded-5"  method="POST">
+                                                    {% csrf_token %}
+                                                    <button type="button" class="btn btn-primary">Buy</button>
+                                                </form>
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             {% else %}
                                 <div class="row">
@@ -83,27 +107,6 @@
                                         {% endif %}
                                     </a>
                                 </div>
-
-                                <div class="modal fade" id="myModal" role="dialog">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title">Modal title</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <p>Modal body text goes here.</p>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'account_login' %}'">Login</button>
-                                                <button type="button" class="btn btn-secondary" onclick="location.href='{% url 'account_signup' %}'">Register</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
                             {% endif %}
                         {% endif%}
                     {% endfor %}
@@ -122,9 +125,55 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'account_login' %}'">Login</button>
+                <button type="button" class="btn btn-secondary" onclick="location.href='{% url 'account_signup' %}'">Register</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript" src="{% static 'chapters/js/chapter.js' %}"></script>
+<script>
+
+    var links = document.getElementsByClassName("chaptergroup");
+
+    for(var i = 0; i < links.length; i++){
+
+        if (!links[i].hasAttribute("href")){
+            links[i].setAttribute("data-toggle", "modal");
+            links[i].setAttribute("href", "#");
+        }
+
+        if (links[i].getAttribute("href").localeCompare("#") == 0)
+        {
+            //links[i].removeAttribute("href", "#");
+            var value = links[i].getAttribute("thing");
+            links[i].setAttribute("href", "#"+value);
+           // links[i].setAttribute("data-target", value);
+            var chapspan = links[i].getElementsByClassName("chapterspan");
+
+            for(var k = 0; k < chapspan.length; k++)
+            {
+                chapspan[k].setAttribute("class", "chapterspan p-2 mt-2 badge badge-white text-black rounded-5 border border-black");
+            }
+        }
+    }
+
+</script>
+
 {% endblock %}
