adds cancel function to forms, minor restyle forms, fixes profile form link

--- a/profiles/templates/profiles/update_billing.html
+++ b/profiles/templates/profiles/update_billing.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">My Profile</h2>
+            <h2 class="logo-font mb-4">My Profile - Billing</h2>
             <hr>
         </div>
     </div>
@@ -32,6 +32,9 @@
                 <button class="btn btn-black rounded-5 text-uppercase float-right">Update Information</button>
             </form>
         </div>
+    </div>
+    <div class="cancel">
+        <a class="btn btn-outline-black px-0 rounded-0" href="{% url 'home' %}">Cancel</a>
     </div>
     {% endblock %}
 
