--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -53,7 +53,7 @@
                     {% for order in orders %}
                     <tr>
                         <td>
-                            <a href="{% url 'order_history' order.order_number %}"
+                            <a class="font-crayola" href="{% url 'order_history' order.order_number %}"
                                title="{{ order.order_number }}">
                                 {{ order.order_number|truncatechars:6 }}
                             </a>
@@ -102,7 +102,7 @@
                     {% for corder in chapterOrders %}
                     <tr>
                         <td>
-                            <a href="">
+                            <a class="font-crayola" href="">
                                 {{ corder.order_number|truncatechars:6 }}
                             </a>
                         </td>
@@ -119,5 +119,8 @@
             </div>
         </div>
 
+    </div>
+    <div class="cancel">
+        <a class="btn btn-outline-black px-0 rounded-0" href="{% url 'home' %}">Cancel</a>
     </div>
     {% endblock %}
