--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container header-container allauth-container">
+<div class="container allauth-header-container allauth-container">
     <div class="overlay"></div>
     <div class="row">
         <div class="col-6">
