--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,26 +1,39 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
-{% load account %}
-
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% extends "base.html" %}
 
 {% block content %}
+<div class="container allauth-header-container allauth-container">
+    <div class="overlay"></div>
+    <div class="row">
+        <div class="col-6">
+            <div class="allauth-form-inner-content">
+                {% block inner_content %}
 
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-    <hr>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+                {% load i18n %}
+                {% load account %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+                {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+                <hr>
+                <h2 class="logo-font font-crayola mb-4">{% trans "Password Reset" %}</h2>
+                <hr>
+                {% if user.is_authenticated %}
+                {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+                <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+
+                <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+
+                    <input type="submit" value="{% trans 'Reset My Password' %}" />
+                    <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
+                </form>
+
+                <p class="font-crayola" >{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+                {% endblock %}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
