--- a/bookCoins/templates/bookCoins/topup_coins.html
+++ b/bookCoins/templates/bookCoins/topup_coins.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{% static 'bookCoins/css/bookcoins.css' %}">
 {% endblock %}
 
+
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -33,71 +34,69 @@
 
                 </div>
                 <div class="row">
-                        <fieldset class="rounded px-3 mb-5">
-                            <legend class="fieldset-label small text-black px-2 w-auto">Billing address</legend>
-                            {{ order_form.phone_number | as_crispy_field }}
-                            {{ order_form.street_address1 | as_crispy_field }}
-                            {{ order_form.street_address2 | as_crispy_field }}
-                            {{ order_form.town_or_city | as_crispy_field }}
-                            {{ order_form.county | as_crispy_field }}
-                            {{ order_form.postcode | as_crispy_field }}
-                            {{ order_form.country | as_crispy_field }}
-                            <div class="form-check form-check-inline float-right mr-0">
-                                <label class="form-check-label" for="id-save-info">Save this billing address to my profile</label>
-                                <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info" checked>
-                            </div>
-                        </fieldset>
+                    <fieldset class="rounded px-3 mb-5">
+                        <legend class="fieldset-label small text-black px-2 w-auto">Billing address</legend>
+                        {{ order_form.phone_number | as_crispy_field }}
+                        {{ order_form.street_address1 | as_crispy_field }}
+                        {{ order_form.street_address2 | as_crispy_field }}
+                        {{ order_form.town_or_city | as_crispy_field }}
+                        {{ order_form.county | as_crispy_field }}
+                        {{ order_form.postcode | as_crispy_field }}
+                        {{ order_form.country | as_crispy_field }}
+                        <div class="form-check form-check-inline float-right mr-0">
+                            <label class="form-check-label" for="id-save-info">Save this billing address to my profile</label>
+                            <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info" checked>
+                        </div>
+                    </fieldset>
 
                 </div>
-            <hr class="my-0">
+                <hr class="my-0">
         </div>
         <div class="col-12 col-lg-6">
             <p class="text-muted">Please fill out the form below to complete your order</p>
-                <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
-                    {{ order_form.full_name | as_crispy_field }}
-                    {{ order_form.email | as_crispy_field }}
-                </fieldset>
-                <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Order Your BookCoins</legend>
-                    {{ order_form.coins | as_crispy_field }}
-                </fieldset>
+            <fieldset class="rounded px-3 mb-5">
+                <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+                {{ order_form.full_name | as_crispy_field }}
+                {{ order_form.email | as_crispy_field }}
+            </fieldset>
+            <fieldset class="rounded px-3 mb-5">
+                <legend class="fieldset-label small text-black px-2 w-auto">Order Your BookCoins</legend>
+                {{ order_form.coins | as_crispy_field }}
+            </fieldset>
 
 
-                <fieldset class="px-3">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
-                    <!-- A Stripe card element will go here -->
-                    <div class="mb-3" id="card-element"></div>
-                    <!-- Used to display form errors -->
-                    <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
-                    <!-- Pass the client secret to the view so we can get the payment intent id -->
-                    <input type="hidden" value="{{ client_secret }}" name="client_secret">
-                </fieldset>
+            <fieldset class="px-3">
+                <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                <!-- A Stripe card element will go here -->
+                <div class="mb-3" id="card-element"></div>
+                <!-- Used to display form errors -->
+                <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                <!-- Pass the client secret to the view so we can get the payment intent id -->
+                <input type="hidden" value="{{ client_secret }}" name="client_secret">
+            </fieldset>
 
-                <div class="submit-button text-right mt-5 mb-2">
-                    <a href="{% url 'profile' %}" class="btn btn-outline-black rounded-0">
+            <div class="submit-button text-right mt-5 mb-2">
+                <a href="" class="btn btn-outline-black rounded-0">
 							<span class="icon">
 								<i class="fas fa-chevron-left"></i>
 							</span>
-                        <span class="font-weight-bold">Go to your profile</span>
-                    </a>
-                    <button id="submit-button" class="btn btn-black rounded-0">
-                        <span class="font-weight-bold">Complete Order</span>
-                        <span class="icon">
+                    <span class="font-weight-bold">Go to your profile</span>
+                </a>
+                <button id="submit-button" class="btn btn-black rounded-0">
+                    <span class="font-weight-bold">Complete Order</span>
+                    <span class="icon">
 								<i class="fas fa-lock"></i>
 							</span>
-                    </button>
-                    <p class="small text-danger my-0">
+                </button>
+                <p class="small text-danger my-0">
 							<span class="icon">
 								<i class="fas fa-exclamation-circle"></i>
 							</span>
-                        <span>Your card will be charged <strong>${{ order_form.coins.value |floatformat:2 }}</strong></span>
-                    </p>
-                </div>
-            </form>
-            <div class="cancel">
-            <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
+                    <span>Your card will be charged <strong id="chargeValue"></strong></span>
+                </p>
             </div>
+            <input type="hidden" id="redirect_url" name="redirect_url" value="{{ request.path }}">
+            </form>
         </div>
     </div>
 </div>
