--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -38,11 +38,47 @@
                 </p>
                 {% endif %}
                 {% if product.rating %}
+                <div class="star-ratings-css">
+                    <div class="star-ratings-css">
+                        <div id="outer">
+                            <div id="inner"></div>
+                        </div>
+                    </div>
+                </div>
                 <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
-
+                <!-- user rating product -->
+                {% if request.user.is_authenticated %}
+                <form class="form update-form" method="POST" action="">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <div class="rating-input input-group">
+                            <div class="input-group-prepend">
+                                <button class="decrement-qty btn btn-sm btn-black rounded-0"
+                                        data-item_id="{{ user_rating.product_id }}" id="decrement-qty_{{ rating.product_id }}">
+                                    <span>
+                                        <i class="fas fa-minus fa-sm"></i>
+                                    </span>
+                                </button>
+                            </div>
+                            <input class="form-control form-control-sm qty_input" type="number"
+                                   name="quantity" value="{{ product.user_rating }}" min="1" max="5"
+                                   data-item_id="{{ user_rating.product_id }}"
+                                   id="id_qty_{{ item.item_id }}">
+                            <div class="input-group-append">
+                                <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                        data-item_id="{{ user_rating.product_id }}" id="increment-qty_{{ user_rating.product_id }}">
+                                    <span>
+                                        <i class="fas fa-plus fa-sm"></i>
+                                    </span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                {% endif %}
                 {% if request.user.is_superuser %}
                     <small class="ml-3">
                         <a class="font-crayola" href="{% url 'edit_product' product.id %}">Edit</a>
@@ -66,7 +102,7 @@
                         {% else %}
                             {% if request.user.is_authenticated %}
                                 <div class="row">
-                                    <a thing={{ chapter.modalcode }} class="chaptergroup" {% for corder in chapterOrders %}{% for item in corder.lineitems.all %}{% if chapter.chapter == item.chapter_no %}href="{% url 'chapter' product.id chapter.id %}"{% endif %}{% endfor %}{% endfor %}>
+                                    <a data-chapterid={{ chapter.id }} data-productid={{ product.id }} data-chpmodalcode={{ chapter.modalcode }} class="chaptergroup" {% for corder in chapterOrders %}{% for item in corder.lineitems.all %}{% if chapter.chapter == item.chapter_no %}href="{% url 'chapter' product.id chapter.id %}"{% endif %}{% endfor %}{% endfor %}>
                                         {% if chapter.chapter == chapter.name %}
                                         <span class="chapterspan p-2 mt-2 badge badge-blue text-black rounded-5 border border-primary">{{ chapter.chapter }}</span>
                                         {% else %}
@@ -83,16 +119,18 @@
                                                     <span aria-hidden="true">&times;</span>
                                                 </button>
                                             </div>
-                                            <div class="modal-body">
-                                                <p>Would you like to buy this chapter?</p>
-                                                <p> Chapter Number: {{ chapter.chapter}} in the {{ chapter.book }}</p>
-                                                <p> This chapter costs {{ chapter.price }} coins</p>
-                                            </div>
+                                            <form class="mt-3 rounded-5" action="{% url 'buy_chapter' %}" method="POST">
+                                                {% csrf_token %}
+                                                <div class="modal-body">
+                                                    <p>Would you like to buy this chapter?</p>
+                                                    <p> Chapter Number: {{ chapter.chapter}} in the {{ chapter.book }}</p>
+                                                    <p> This chapter costs {{ chapter.price }} coins</p>
+                                                    <input type="text" name="productId" id="productId" value=""/>
+                                                    <input type="text" name="chapterId" id="chapterId" value=""/>
+                                                </div>
+                                                <button type="submit" class="btn btn-primary">Buy</button>
+                                            </form>
                                             <div class="modal-footer">
-                                                <form class="mt-3 rounded-5"  method="POST">
-                                                    {% csrf_token %}
-                                                    <button type="button" class="btn btn-primary">Buy</button>
-                                                </form>
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                             </div>
                                         </div>
@@ -163,18 +201,34 @@
         if (links[i].getAttribute("href").localeCompare("#") == 0)
         {
             //links[i].removeAttribute("href", "#");
-            var value = links[i].getAttribute("thing");
+            var value = links[i].getAttribute("data-chpmodalcode");
             links[i].setAttribute("href", "#"+value);
-           // links[i].setAttribute("data-target", value);
             var chapspan = links[i].getElementsByClassName("chapterspan");
 
             for(var k = 0; k < chapspan.length; k++)
             {
-                chapspan[k].setAttribute("class", "chapterspan p-2 mt-2 badge badge-white text-black rounded-5 border border-black");
+                chapspan[k].setAttribute("class", "chapterspan p-2 mt-2 badge badge-white text-black rounded-5 border border-warning");
             }
+
+            $(document).on("click", ".chaptergroup", function () {
+                var myChapterId = $(this).data('chapterid');
+                $(".modal-body #chapterId").val( myChapterId );
+                var myProductId = $(this).data('productid');
+                $(".modal-body #productId").val( myProductId );
+            });
         }
     }
 
 </script>
+
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 
 {% endblock %}
