--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,8 +16,8 @@
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
                 {% if product.image %}
-                <a href="{{ product.image.url }}" target="_blank">
-                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                <a href="{{ product.image_url }}" target="_blank">
+                    <img class="card-img-top img-fluid" src="{{ product.image_url }}" alt="{{ product.name }}">
                 </a>
                 {% else %}
                 <a href="">
@@ -41,14 +41,16 @@
                 <div class="star-ratings-css">
                     <div class="star-ratings-css">
                         <div id="outer">
-                            <div id="inner"></div>
+                            <div id="inner" style="--width:{{ product.rating }}rem"></div>
+                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                            {% else %}
+                            <small class="text-muted">No Rating</small>
+
                         </div>
                     </div>
                 </div>
-                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                {% else %}
-                <small class="text-muted">No Rating</small>
                 {% endif %}
+
                 <!-- user rating product -->
                 {% if request.user.is_authenticated %}
                 <form class="form update-form" method="POST" action="">
