--- a/templates/includes/mobile_top_header.html
+++ b/templates/includes/mobile_top_header.html
@@ -29,28 +29,37 @@
     </a>
     <div class="dropdown-menu border-0" aria-labelledby="user-options">
         {% if request.user.is_authenticated %}
-        {% if request.user.is_superuser %}
-        <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-        {% endif %}
-        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+            {% if request.user.is_superuser %}
+                <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+            {% endif %}
+            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
         {% else %}
-        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
         {% endif %}
     </div>
 </li>
 <li class="list-inline-item">
-    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="href = "">
+    <a class="text-black nav-link d-block d-lg-none" href="#" id="book-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
-            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-            <p class="my-0">
-                {% if grand_total %}
-                ${{ grand_total|floatformat:2 }}
-                {% else %}
-                $0.00
-                {% endif %}
-            </p>
+            <div><i class="fas fa-open-book fa-lg"></i></div>
+            <p class="my-0">My Bookshelf</p>
         </div>
     </a>
+    <div class="dropdown-menu border-0" aria-labelledby="book-options">
+        {% if request.user.is_authenticated %}
+        {% if chapterOrders %}
+        {% for corder in chapterOrders %}
+        {% for item in corder.lineitems.all %}
+        <a href="{% url 'product_detail' item.chapter.book.id %}" id={{ item.chapter.book.id }} class="dropdown-item">{{ item.book }}</a>
+        {% endfor %}
+        {% endfor %}
+        {% else %}
+        <a href="#" class="dropdown-item">No book</a>
+        {% endif %}
+        {% else %}
+        <a href="#" class="dropdown-item">No book</a>
+        {% endif %}
+    </div>
 </li>
