--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,11 +1,20 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+
+{% block head_title %}{% trans "Changed Password" %}{% endblock %}
 
 {% block content %}
+
+<div class="col col-10 offset-1 logout-message">
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
+    <h2 class="logo-font font-crayola mb-4">{% trans "Changed Password" %}</h2>
     <hr>
-    <p>{% trans 'Your password is now changed.' %}</p>
+
+    <p class="font-crayola logout-p ">{% trans 'Your password is now changed.' %}</p>
+
+        <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Continue reading</a>
+    </form>
+
+</div>
 {% endblock %}
