--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,56 +37,58 @@
                     </a>
                 </p>
                 {% endif %}
-                {% if product.rating %}
-                <div class="star-ratings-css">
-                    <div class="star-ratings-css">
-                        <div id="outer">
-                            <div id="inner" style="--width:{{ product.rating }}rem"></div>
-                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                            {% else %}
-                            <small class="text-muted">No Rating</small>
-
+                <div class="col" id="ratings">
+                    <div class="row">
+                    {% if product.rating %}
+                        <div class="star-ratings-css">
+                        <div class="star-ratings-css">
+                            <div id="outer">
+                                <small class="text-muted">Rating</small><div id="inner" style="--width:{{ product.rating }}rem"></div>
+                                {% else %}
+                                <small class="text-muted">No Rating</small>
+                            </div>
                         </div>
                     </div>
-                </div>
-                {% endif %}
+                    {% endif %}
 
-                <!-- user rating product -->
-                {% if request.user.is_authenticated %}
-                <form class="form update-form" method="POST" action="">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <div class="rating-input input-group">
-                            <div class="input-group-prepend">
-                                <button class="decrement-qty btn btn-sm btn-black rounded-0"
-                                        data-item_id="{{ user_rating.product_id }}" id="decrement-qty_{{ rating.product_id }}">
-                                    <span>
-                                        <i class="fas fa-minus fa-sm"></i>
-                                    </span>
-                                </button>
-                            </div>
-                            <input class="form-control form-control-sm qty_input" type="number"
+                    <!-- user rating product -->
+                    {% if request.user.is_authenticated %}
+                    <form class="form update-form" method="POST" action="">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <div class="rating-input input-group">
+                        <!--    <div class="input-group-prepend">
+                                    <button class="decrement-qty btn btn-sm btn-black rounded-0"
+                                            data-item_id="{{ user_rating.product_id }}" id="decrement-qty_{{ rating.product_id }}">
+                                        <span>
+                                            <i class="fas fa-minus fa-sm"></i>
+                                        </span>
+                                    </button>
+                                </div>
+                                <input class="form-control form-control-sm qty_input" type="number"
                                    name="quantity" value="{{ product.user_rating }}" min="1" max="5"
                                    data-item_id="{{ user_rating.product_id }}"
                                    id="id_qty_{{ item.item_id }}">
-                            <div class="input-group-append">
-                                <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                <div class="input-group-append">
+                                    <button class="increment-qty btn btn-sm btn-black rounded-0"
                                         data-item_id="{{ user_rating.product_id }}" id="increment-qty_{{ user_rating.product_id }}">
-                                    <span>
-                                        <i class="fas fa-plus fa-sm"></i>
-                                    </span>
-                                </button>
+                                        <span>
+                                            <i class="fas fa-plus fa-sm"></i>
+                                        </span>
+                                    </button>
+                                </div> -->
                             </div>
                         </div>
+                    </form>
+                    {% endif %}
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a class="font-crayola" href="{% url 'edit_product' product.id %}">Edit</a>
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                     </div>
-                </form>
-                {% endif %}
-                {% if request.user.is_superuser %}
-                    <small class="ml-3">
-                        <a class="font-crayola" href="{% url 'edit_product' product.id %}">Edit</a>
-                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                    </small>
-                {% endif %}
+                </div>
 
                 <p class="mt-3">{{ product.description }}</p>
                 <div class="chapter-badges">
@@ -127,8 +129,8 @@
                                                     <p>Would you like to buy this chapter?</p>
                                                     <p> Chapter Number: {{ chapter.chapter}} in the {{ chapter.book }}</p>
                                                     <p> This chapter costs {{ chapter.price }} coins</p>
-                                                    <input type="text" name="productId" id="productId" value=""/>
-                                                    <input type="text" name="chapterId" id="chapterId" value=""/>
+                                                    <input type="hidden" name="productId" value=""/>
+                                                    <input type="hidden" name="chapterId" value=""/>
                                                 </div>
                                                 <button type="submit" class="btn btn-primary">Buy</button>
                                             </form>
@@ -214,23 +216,18 @@
 
             $(document).on("click", ".chaptergroup", function () {
                 var myChapterId = $(this).data('chapterid');
-                $(".modal-body #chapterId").val( myChapterId );
+                var cid = document.getElementsByName("chapterId");
+                for(var i = 0; i < cid.length; i++){
+                    cid[i].setAttribute("value", myChapterId);
+                }
                 var myProductId = $(this).data('productid');
-                $(".modal-body #productId").val( myProductId );
+                var pid = document.getElementsByName("productId");
+                for(var i = 0; i < pid.length; i++){
+                    pid[i].setAttribute("value", myProductId);
+                }
             });
         }
     }
 
 </script>
-
-<script type="text/javascript">
-    // Update quantity on click
-    $('.update-link').click(function(e) {
-        var form = $(this).prev('.update-form');
-        form.submit();
-    })
-
-{{ block.super }}
-{% include 'products/includes/quantity_input_script.html' %}
-
 {% endblock %}
