--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -1,18 +1,31 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
-{% load account %}
-
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% extends "base.html" %}
 
 {% block content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
-    <hr>
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+<div class="container allauth-header-container allauth-container">
+    <div class="overlay"></div>
+    <div class="row">
+        <div class="col-6">
+            <div class="allauth-form-inner-content">
+                {% block inner_content %}
+
+                {% load i18n %}
+                {% load account %}
+
+                {% block head_title %}{% trans "Password Reset" %}{% endblock %}
+
+                <hr>
+                <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
+                <hr>
+
+                {% if user.is_authenticated %}
+                {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
+
+                <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+                {% endblock %}
+                <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Continue to titles</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
