--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,25 +1,43 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% extends "base.html" %}
 
 {% block content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
-    <hr>
+<div class="container allauth-header-container allauth-container">
+    <div class="overlay"></div>
+    <div class="row">
+        <div class="col-6">
+            <div class="allauth-form-inner-content">
+                {% block inner_content %}
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        {% if form %}
-            <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
-            </form>
-        {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
-        {% endif %}
-    {% endif %}
+                {% load i18n %}
+                {% load account %}
+
+                {% block head_title %}{% trans "Change Password" %}{% endblock %}
+                <hr>
+                <h2 class="logo-font mb-4 font-crayola">{% if token_fail %}{% trans "Bad Token" %}{% else %}<div class="message-head mt-4">{% trans "Change Password" %}</div>{% endif %}</h2>
+                <hr>
+
+                {% if token_fail %}
+                {% url 'account_reset_password' as passwd_reset_url %}
+                <p>The password reset link was invalid, possibly because it has already been used.  Please request a <a class="button secondaryAction font-crayola" href="{% url 'account_reset_password' %}">{% trans "new password reset?" %}</a></p>
+                {% else %}
+                {% if form %}
+                <form method="POST" action="{{ action_url }}">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                </form>
+                {% else %}
+                <p class="font-crayola">{% trans 'Your password is now changed.' %}</p>
+                {% endif %}
+                {% endif %}{% endblock %}
+                <div class="reset-password-continue">
+                    <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Or continue to titles</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
+
+
+
