--- a/products/templates/products/product_detail-copy.html
+++ b/products/templates/products/product_detail-copy.html
@@ -220,7 +220,7 @@
 </script>
 
 <script>
-var $stars;
+    var $stars;
 
 jQuery(document).ready(function ($) {
 
@@ -239,12 +239,12 @@ jQuery(document).ready(function ($) {
   function markStarsAsActive(index) {
     unmarkActive();
     for (var i = 0; i <= index; i++) {
-      $($stars.get(i)).addClass('amber-text');
+      $($stars.get(i)).addClass('text-warning');
     }
   }
 
   function unmarkActive() {
-    $stars.removeClass('amber-text');
+    $stars.removeClass('text-warning');
   }
 
   $stars.on('click', function () {
@@ -269,10 +269,16 @@ $(function () {
     // Append popover to #rateMe to allow handling form inside the popover
     container: '#rateMe',
     // Custom content for popover
-    content: `<div class="my-0 py-0"> <textarea type="text" style="font-size: 0.78rem" class="md-textarea form-control py-0" placeholder="Write us what can we improve" rows="3"></textarea> <button id="voteSubmitButton" type="submit" class="btn btn-sm btn-primary">Submit!</button> <button id="closePopoverButton" class="btn btn-flat btn-sm">Close</button>  </div>`
+    var yes=getelbyclass;
+    var len = yes.length;
+    var starinput= getelbyid(yellow star);
+    stariput.value =len;
+
+    content: `<form action={get_user_rating product.id} method=POST> <div class="my-0 py-0"> <textarea type="text" style="font-size: 0.78rem" class="md-textarea form-control py-0" placeholder="Write us what can we improve" rows="3"></textarea><input type=hidden name=starinput id=starinput/> <button id="voteSubmitButton" type="submit" class="btn btn-sm btn-primary">Submit!</button> <button id="closePopoverButton" class="btn btn-flat btn-sm">Close</button>  </div></form>`
   });
   $('.rate-popover').tooltip();
 });
+
 
 </script>
 {% endblock %}
