--- a/products/templates/products/product_detail-copy.html
+++ b/products/templates/products/product_detail-copy.html
@@ -282,3 +282,16 @@ $(function () {
 
 </script>
 {% endblock %}
+
+<div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
+           aria-describedby="button-addon2">
+    <div class="input-group-append">
+        <button class="btn btn-md btn-outline-default m-0 px-3 py-2 z-depth-0 waves-effect" type="button" id="button-addon2">Button</button>
+    </div>
+</div>
+
+
+var yeslen = document.getElementsByClassName("amber-text").length;
+var starinput = getElementById("starinput");
+starinput.setAttribute("value", yeslen);
