--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
+<link rel="stylesheet" href="{% static 'profile/css/profile.css' %}">
 {% endblock %}
 
 {% block page_header %}
@@ -80,37 +80,26 @@
                 <p>Address 2:{{ profile.default_street_address2 }}</p>
                 <p>City: {{ profile.default_town_or_city }}</p>
                 <p>Postcode: {{ profile.default_postcode }}</p>
-                <p>Country: {{ profile.default_county }}</p>
+                <p>Country: {{ profile.default_country }}</p>
                 <button class="btn btn-black btn-profile rounded-5  text-uppercase float-right" onclick="location.href='{% url 'update_billing' %}'">Update Billing Address</button>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-6">
+        <div class="col-24 col-lg-12">
             <p class="text-muted">Your Bookshelf</p>
             <div class="order-history table-responsive">
                 <table class="table table-sm table-borderless">
-                    <thead>
-                    <tr>
-                        <th>Order Number</th>
-                        <th>Date</th>
-                        <th>Chapter</th>
-                        <th>Book</th>
-                    </tr>
-                    </thead>
                     <tbody>
                     {% for corder in chapterOrders %}
                     <tr>
-                        <td>
-                            <a class="font-crayola" href="">
-                                {{ corder.order_number|truncatechars:6 }}
-                            </a>
-                        </td>
-                        <td>{{ corder.date }}</td>
-
                         {% for item in corder.lineitems.all %}
-                        <td>{{ item.chapter_no }}</td>
-                        <td>{{ item.book }}</td>
+                        <a id="{{item.book}}+img" href="{{ item.chapter.book.image_url }}" target="_blank">
+                            <img width="100" height="200" src="{{ item.chapter.book.image_url }}" alt="{{ item.chapter.book.name }}">
+                        </a>
+                        <a id={{ item.book }} class="font-crayola" href="{% url 'product_detail' item.chapter.book.id  %}"
+                        <td >{{ item.book }}</td>
+                        </a>
                         {% endfor %}
                     </tr>
                     {% endfor %}
@@ -118,9 +107,5 @@
                 </table>
             </div>
         </div>
-
-    </div>
-    <div class="cancel">
-        <a class="btn btn-outline-black px-0 rounded-0" href="{% url 'home' %}">Cancel</a>
     </div>
     {% endblock %}
