--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -130,7 +130,7 @@
                                 </div>
                             {% else %}
                                 <div class="row">
-                                    <a data-toggle="modal" href="#myModal">
+                                    <a class="" href="{% url 'account_login' %}">
                                         {% if chapter.chapter == chapter.name %}
                                             <span class="p-2 mt-2 badge badge-white text-black rounded-5 border border-dark">{{ chapter.chapter }}</span>
                                         {% else %}
@@ -156,25 +156,7 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" onclick="location.href='{% url 'account_login' %}'">Login</button>
-                <button type="button" class="btn btn-secondary" onclick="location.href='{% url 'account_signup' %}'">Register</button>
-            </div>
-        </div>
-    </div>
-</div>
+
 {% endblock %}
 
 {% block postloadjs %}
@@ -269,7 +251,7 @@ $(function () {
     // Append popover to #rateMe to allow handling form inside the popover
     container: '#rateMe',
     // Custom content for popover
-    content: `<div class="my-0 py-0"> <textarea type="text" style="font-size: 0.78rem" class="md-textarea form-control py-0" placeholder="Write us what can we improve" rows="3"></textarea> <button id="voteSubmitButton" type="submit" class="btn btn-sm btn-primary">Submit!</button> <button id="closePopoverButton" class="btn btn-flat btn-sm">Close</button>  </div>`
+    content: `<div class="popover-inner my-0 py-0 md-form"> <textarea class="popover invisible sm-textarea form-control py-0"></textarea><button id="voteSubmitButton" type="submit" class="btn btn-sm btn-primary">Submit!</button> <button id="closePopoverButton" class="btn btn-flat btn-sm">Close</button> </div>`
   });
   $('.rate-popover').tooltip();
 });
