--- a/profiles/templates/profiles/update_billing.html
+++ b/profiles/templates/profiles/update_billing.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
+<link rel="stylesheet" href="{% static 'profile/css/profile.css' %}">
 {% endblock %}
 
 {% block page_header %}
@@ -40,5 +40,5 @@
 
     {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+    <script type="text/javascript" src="{% static 'profile/js/countryfield.js' %}"></script>
     {% endblock %}
